--- a/BarcosReservaUsuario.html
+++ b/BarcosReservaUsuario.html
@@ -101,6 +101,7 @@
                 })
             },
             siguente_pantalla(i) {
+                this.bote = i
                 this.form_reserva.id_vote = i.id
                 this.form_resumen.nombre_bote = i.nombre
                 this.form_resumen.image_bote = i.principal
