--- a/ReservaUsuarioPagos.html
+++ b/ReservaUsuarioPagos.html
@@ -141,7 +141,8 @@
                                 <b>Paypal</b>
                             </label>
                         </div>
-                        <img src="<?php echo imagen(3) ?>" class="img-paypal mx-3" alt="">
+                        <!-- <img src="<?php #echo imagen(3) ?>" class="img-paypal mx-3" alt=""> -->
+                        <img src="" class="img-paypal mx-3" alt="">
                     </div>
                     <div class="">
                         <p> Pagar con Paypal, puedes pagar con tu tarjeta de crédito si no tienes una cuenta de
