--- a/reserva.html
+++ b/reserva.html
@@ -11,7 +11,6 @@
                 <div class="container d-flex justify-content-between flex-column flex-md-row">
                     <div class="card w-card" role="button" @click="por_barco()">
                         <div class="card-body">
-                            <img src="<?php echo imagen(1) ?>" alt="">
                             <h4 class="card-title">Reserva Por Barco</h4>
                             <p class="card-text">Determina el barco que más te gusta y te diremos las fechas y horarios
                                 que
@@ -22,7 +21,7 @@
                     </div>
                     <div class="card w-card" role="button" @click="por_fecha()">
                         <div class="card-body">
-                            <img src="<?php echo imagen(2) ?>" alt="">
+                            <img src="" alt="">
                             <h4 class="card-title">Reserva Por Fecha</h4>
                             <p class="card-text">Dinos qué fecha o rango de fechas deseas navegar y te diremos que
                                 embarcaciones tenemos disponibles.</p>
