--- a/AdministradorTareasIndex.html
+++ b/AdministradorTareasIndex.html
@@ -17,25 +17,29 @@
         <div class="d-flex justify-content-between">
             <div class="d-flex">
                 <div class="form-check me-3 f-9">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="ver_todas" checked @change="getTareas('todas')">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="ver_todas" checked
+                        @change="getTareas('todas')">
                     <label class="form-check-label" for="ver_todas">
                         Ver todas
                     </label>
                 </div>
                 <div class="form-check me-3 f-9">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="tareas_simples" @change="getTareas('simples')">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="tareas_simples"
+                        @change="getTareas('simples')">
                     <label class="form-check-label" for="tareas_simples">
                         Solo tareas simples
                     </label>
                 </div>
                 <div class="form-check me-3 f-9">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="tareas_rutinarias" @change="getTareas('rutinarias')">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="tareas_rutinarias"
+                        @change="getTareas('rutinarias')">
                     <label class="form-check-label" for="tareas_rutinarias">
                         Solo Tareas Rutinarias
                     </label>
                 </div>
                 <div class="form-check me-3 f-9">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="tareas_completadas" @change="getTareas('completadas')">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="tareas_completadas"
+                        @change="getTareas('completadas')">
                     <label class="form-check-label" for="tareas_completadas">
                         Solo Tareas completadas
                     </label>
@@ -60,7 +64,8 @@
                             <strong class="color-dark-blue me-3" x-text="i.tipo_tarea?.nombre"></strong>
                             <strong class="color-dark-extras me-3" x-text="i.titulo"></strong>
                             <span class="color-gray-dark me-1"> - Prioridad: </span>
-                            <span class="me-3" :style="'color:' + i.importancia?.color" x-text="i.importancia?.nombre">Crítica: </span>
+                            <span class="me-3" :style="'color:' + i.importancia?.color"
+                                x-text="i.importancia?.nombre">Crítica: </span>
                             <span class="color-gray-dark me-3"> - Fecha asignada: </span>
                             <span class="color-dark-blue" x-text="i.fecha_asignada"></span>
                         </div>
@@ -69,7 +74,8 @@
                             <span class="color-extras-gray">Gastos adheridos</span>
                             <span class="mx-3">|</span>
                             <span class="color-extras-gray me-3">Total de gastos</span>
-                            <strong class="color-dark-blue" x-text="'€' + (i.gastos_sum_precio == null ? 0 : i.gastos_sum_precio)">124</strong>
+                            <strong class="color-dark-blue"
+                                x-text="'€' + (i.gastos_sum_precio == null ? 0 : i.gastos_sum_precio)">124</strong>
                             <span class="mx-3">|</span>
                             <span class="color-dark-blue me-1" x-text="i.observaciones_count"></span>
                             <span class="color-extras-gray">Observaciones</span>
@@ -85,15 +91,18 @@
                                 <i class="fa-brands fa-whatsapp"></i>
                             </div>
                         </div>
-    
+
                     </div>
                     <div class="text-end">
-                        <span class="color-extras-gray f-9" x-text="'Creado: ' + i.created_at + ' - Martín Pavón'"></span>
+                        <span class="color-extras-gray f-9"
+                            x-text="'Creado: ' + i.created_at + ' - Martín Pavón'"></span>
                     </div>
                 </div>
                 <div class="col-md-2 d-flex justify-content-around">
-                    <button class="btn btn-transparent color-dark-red" @click="eliminar_tarea(i.id, index)"><i class="fa-solid fa-trash-can"></i></button>
-                    <button class="btn btn-transparent color-gray-dark"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="btn btn-transparent color-dark-red" @click="eliminar_tarea(i.id, index)"><i
+                            class="fa-solid fa-trash-can"></i></button>
+                    <button class="btn btn-transparent color-gray-dark"><i
+                            class="fa-solid fa-pen-to-square"></i></button>
                     <button class="btn btn-transparent color-gray-dark"><i class="fa-solid fa-check"></i></button>
                 </div>
             </div>
@@ -104,17 +113,13 @@
     function AdministradorTareasIndex() {
         return {
             tareas: [],
-            filtros: {tipo: null, orden: 'DESC'},
+            filtros: { tipo: null, orden: 'DESC' },
             init() {
                 $('#nav-tareas-tab').click()
                 this.getTareas()
             },
             getTareas(tipo) {
-                console.log('tipo ==> ', tipo);
-                if(tipo) {
-                    this.filtros.tipo = tipo 
-                }
-                console.log('this.filtros ==> ', this.filtros);
+                if (tipo) this.filtros.tipo = tipo
 
                 this.loading = true
                 let url = this.base_url + '/administrador/get_tareas'
@@ -134,7 +139,7 @@
                     if (result.isConfirmed) {
                         this.loading = true;
                         let url = this.base_url + '/administrador/eliminar_tareas'
-                        axios.post(url, {id: id}).then(res => {
+                        axios.post(url, { id: id }).then(res => {
                             if (res.data.status == 200) {
                                 this.tareas.splice(index, 1)
                                 Swal.fire('Éxito', res.data.msg, 'success')
